ESP-32-P4/Tela/build/log/idf_py_stdout_output_570519
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/diogo/Documents/Uni/ODS/ESP-32_P4/build/bootloader/esp-idf/esptool_py && /home/diogo/.espressif/python_env/idf5.4_py3.14_env/bin/python /home/diogo/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /home/diogo/Documents/Uni/ODS/ESP-32_P4/build/bootloader/bootloader.bin
Bootloader binary size 0x56f0 bytes. 0x910 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/source/display_manager.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/source/display_manager.c.obj 
/home/diogo/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/build/config -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/header -I/home/diogo/esp/esp-idf/components/newlib/platform_include -I/home/diogo/esp/esp-idf/components/freertos/config/include -I/home/diogo/esp/esp-idf/components/freertos/config/include/freertos -I/home/diogo/esp/esp-idf/components/freertos/config/riscv/include -I/home/diogo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/diogo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/diogo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/diogo/esp/esp-idf/components/freertos/esp_additions/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/include/soc -I/home/diogo/esp/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/home/diogo/esp/esp-idf/components/esp_hw_support/dma/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/port/esp32p4/. -I/home/diogo/esp/esp-idf/components/esp_hw_support/port/esp32p4/include -I/home/diogo/esp/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/home/diogo/esp/esp-idf/components/heap/include -I/home/diogo/esp/esp-idf/components/heap/tlsf -I/home/diogo/esp/esp-idf/components/log/include -I/home/diogo/esp/esp-idf/components/soc/include -I/home/diogo/esp/esp-idf/components/soc/esp32p4 -I/home/diogo/esp/esp-idf/components/soc/esp32p4/include -I/home/diogo/esp/esp-idf/components/soc/esp32p4/register -I/home/diogo/esp/esp-idf/components/hal/platform_port/include -I/home/diogo/esp/esp-idf/components/hal/esp32p4/include -I/home/diogo/esp/esp-idf/components/hal/include -I/home/diogo/esp/esp-idf/components/esp_rom/include -I/home/diogo/esp/esp-idf/components/esp_rom/esp32p4/include -I/home/diogo/esp/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/home/diogo/esp/esp-idf/components/esp_rom/esp32p4 -I/home/diogo/esp/esp-idf/components/esp_common/include -I/home/diogo/esp/esp-idf/components/esp_system/include -I/home/diogo/esp/esp-idf/components/esp_system/port/soc -I/home/diogo/esp/esp-idf/components/esp_system/port/include/riscv -I/home/diogo/esp/esp-idf/components/esp_system/port/include/private -I/home/diogo/esp/esp-idf/components/riscv/include -I/home/diogo/esp/esp-idf/components/lwip/include -I/home/diogo/esp/esp-idf/components/lwip/include/apps -I/home/diogo/esp/esp-idf/components/lwip/include/apps/sntp -I/home/diogo/esp/esp-idf/components/lwip/lwip/src/include -I/home/diogo/esp/esp-idf/components/lwip/port/include -I/home/diogo/esp/esp-idf/components/lwip/port/freertos/include -I/home/diogo/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/diogo/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/diogo/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/diogo/esp/esp-idf/components/nvs_flash/include -I/home/diogo/esp/esp-idf/components/esp_partition/include -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_wifi_remote/idf_tag_v5.4/include/injected -I/home/diogo/esp/esp-idf/components/esp_wifi/include -I/home/diogo/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/diogo/esp/esp-idf/components/esp_event/include -I/home/diogo/esp/esp-idf/components/esp_netif/include -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_wifi_remote/include -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_wifi_remote/idf_tag_v5.4/include -I/home/diogo/esp/esp-idf/components/esp_http_server/include -I/home/diogo/esp/esp-idf/components/http_parser -I/home/diogo/esp/esp-idf/components/esp_lcd/include -I/home/diogo/esp/esp-idf/components/esp_lcd/interface -I/home/diogo/esp/esp-idf/components/esp_lcd/rgb/include -I/home/diogo/esp/esp-idf/components/esp_lcd/dsi/include -I/home/diogo/esp/esp-idf/components/driver/deprecated -I/home/diogo/esp/esp-idf/components/driver/i2c/include -I/home/diogo/esp/esp-idf/components/driver/touch_sensor/include -I/home/diogo/esp/esp-idf/components/driver/twai/include -I/home/diogo/esp/esp-idf/components/esp_pm/include -I/home/diogo/esp/esp-idf/components/esp_ringbuf/include -I/home/diogo/esp/esp-idf/components/esp_driver_gpio/include -I/home/diogo/esp/esp-idf/components/esp_driver_pcnt/include -I/home/diogo/esp/esp-idf/components/esp_driver_gptimer/include -I/home/diogo/esp/esp-idf/components/esp_driver_spi/include -I/home/diogo/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/diogo/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/diogo/esp/esp-idf/components/esp_driver_i2s/include -I/home/diogo/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/diogo/esp/esp-idf/components/sdmmc/include -I/home/diogo/esp/esp-idf/components/esp_driver_sdspi/include -I/home/diogo/esp/esp-idf/components/esp_driver_sdio/include -I/home/diogo/esp/esp-idf/components/esp_driver_dac/include -I/home/diogo/esp/esp-idf/components/esp_driver_rmt/include -I/home/diogo/esp/esp-idf/components/esp_driver_tsens/include -I/home/diogo/esp/esp-idf/components/esp_driver_sdm/include -I/home/diogo/esp/esp-idf/components/esp_driver_i2c/include -I/home/diogo/esp/esp-idf/components/esp_driver_uart/include -I/home/diogo/esp/esp-idf/components/vfs/include -I/home/diogo/esp/esp-idf/components/esp_driver_ledc/include -I/home/diogo/esp/esp-idf/components/esp_driver_parlio/include -I/home/diogo/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/lvgl__lvgl -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/lvgl__lvgl/src -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/lvgl__lvgl/examples -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/lvgl__lvgl/demos -I/home/diogo/esp/esp-idf/components/json/cJSON -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_hosted/host -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_hosted/host/api/include -I/home/diogo/Documents/Uni/ODS/ESP-32_P4/managed_components/espressif__esp_lcd_jd9365/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/diogo/Documents/Uni/ODS/ESP-32_P4=. -fmacro-prefix-map=/home/diogo/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DESP_LCD_JD9365_VER_MAJOR=2 -DESP_LCD_JD9365_VER_MINOR=0 -DESP_LCD_JD9365_VER_PATCH=2 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/source/display_manager.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/source/display_manager.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/source/display_manager.c.obj -c /home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c
/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c: In function 'display_init':
/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c:206:29: error: 'lvgl_tick_task' undeclared (first use in this function)
  206 |     xTaskCreatePinnedToCore(lvgl_tick_task,    "lvgl_tick",    1024, NULL, 5, NULL, 1);
      |                             ^~~~~~~~~~~~~~
/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c:206:29: note: each undeclared identifier is reported only once for each function it appears in
/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c: At top level:
/home/diogo/Documents/Uni/ODS/ESP-32_P4/main/source/display_manager.c:47:23: warning: 'flush_done_cb' defined but not used [-Wunused-function]
   47 | static bool IRAM_ATTR flush_done_cb(esp_lcd_panel_handle_t panel,
      |                       ^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
